--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.3",
     "tailwind-scrollbar": "^2.0.1",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-line-clamp": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
